adição de novos arquivos

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   margin: 20px;
-  background: linear-gradient(to bottom right, #f0f4f8, #ffffff);
+  background: linear-gradient(to bottom right, #f6ecd2, #a4adf8);
   color: #333;
 }
 
